[B]0.0.2[/B]
- Removed a lot of unnecessary code
- Added depends on youtube plugin
- Added depends on mmafighting plugin
- Added new feeds:
    # BellatorMMA (Youtube)
    # HDNet Fights (Youtube)
    # Middleeasy TV (Youtube)
    # MMAFighting.com (Plugin)
    # MMAinterviews.tv (Youtube)
    # MMA Nuts (RSS)
    # UFC (Youtube)


[B]0.0.1[/B]
- Initial alpha version