@@ -3,9 +3,18 @@ A Simple addon to aggregate and stream content from various combat sport related
 Currently Supported Feeds:
 
     # BellatorMMA (Youtube)
+    # Eddie Bravo (Youtube)
+    # Evolve Mixed Martial Arts (Youtube)
     # HDNet Fights (Youtube)
+    # Iron Forges Iron (Youtube)
     # Middleeasy TV (Youtube)
     # MMAFighting.com (Plugin)
     # MMAinterviews.tv (Youtube)
+    # MMAWeekly.com Videos (Youtube)
+    # MMA H.E.A.T. (Youtube)
+    # MMA: Inside the Cage (Youtube)
     # MMA Nuts (RSS)
+    # StillW1ll (Youtube)
     # UFC (Youtube)
+    # Whoa! TV (Youtube)
+    # www.MMA30.com (Youtube)
